<resources>
    <string name="app_name">bloGee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_auth">Login/Signup</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="arg_article_id">ARTICLE_ID</string>
    <string name="arg_username">USERNAME</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
</resources>