<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.nishantsahu.androidblogapp.ui.feed.GlobalFeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/global_feed_openArticle"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_feed">

            <argument
                android:name="@string/arg_article_id"
                app:argType="string"/>

        </action>
        <action
            android:id="@+id/global_feed_openProfile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_feed">

            <argument
                android:name="@string/arg_username"
                app:argType="string"/>

        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_my_feed"
        android:name="com.nishantsahu.androidblogapp.ui.feed.MyFeedFragment"
        android:label="@string/menu_my_feed"
        tools:layout="@layout/fragment_feed">
        <action
            android:id="@+id/my_feed_openArticle"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_my_feed">
            <argument
                android:name="@string/arg_article_id"
                app:argType="string"/>
        </action>
        <action
            android:id="@+id/my_feed_openProfile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_my_feed">

            <argument
                android:name="@string/arg_username"
                app:argType="string"/>

        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_auth"
        android:name="com.nishantsahu.androidblogapp.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.nishantsahu.androidblogapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_article"
        android:name="com.nishantsahu.androidblogapp.ui.article.ArticleFragment"
        tools:layout="@layout/fragment_article"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.nishantsahu.androidblogapp.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"/>


</navigation>